--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 <html lang="en">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+		<script defer data-domain="harrikilpio.com" src="https://plausible.io/js/script.js"></script>
 	</head>
 	<body>
 		<Header title={SITE_TITLE} />
@@ -20,4 +21,5 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		</main>
 		<Footer />
 	</body>
+	
 </html>
