--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,12 +9,11 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 <html lang="en">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-		<script defer data-domain="harrikilpio.com" src="https://plausible.io/js/script.js"></script>
 	</head>
 	<body>
 		<Header title={SITE_TITLE} />
 		<main>
-			<h1>Moikka ja Tervetuloa!</h1>
+			<h1>Moikka ja tervetuloa!</h1>
 			<p>
 				Voit tutustua uusimpiin <a href="/blog">blogkirjoituksiini</a>. Pääosin sivuan näissä erilaisia kokeilujani Astron parissa.
 			</p>
