--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -68,7 +68,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 							{
 								updatedDate && (
 									<div class="last-updated-on">
-										Last updated on <FormattedDate date={updatedDate} />
+										Päivitetty viimeksi <FormattedDate date={updatedDate} />
 									</div>
 								)
 							}
