--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<main>
 			<h1>Moikka ja tervetuloa!</h1>
 			<p>
-				Voit tutustua uusimpiin <a href="/blog">blogkirjoituksiini</a>. Pääosin sivuan näissä erilaisia kokeilujani Astron parissa.
+				Voit tutustua uusimpiin <a href="/blog">blogkirjoituksiini</a>. Pääosin sivuan näissä erilaisia kokeilujani <a href="https://astro.build">Astron</a> parissa ja muiden teknlogiakokeilujen parissa.
 			</p>
 		</main>
 		<Footer />
