--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,7 +13,7 @@ import Layout from '../layouts/BlogPost.astro';
 	<p>Asioita joista olen kiinnostunut</p>
 	<ul>
 		<li>CSS ja sen mahdollistamat asiat esim. CSS Grid</li>
-		<li>hyvin suunnittellut gridit</li>
+		<li>hyvin suunnitellut gridit</li>
 		<li>hyvin muotoillut ulkoasut</li>
 		<li>hienosti suunnittelut muotoilukirjastot (Design Systems)</li>
 		<li>typografia</li>
