--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -2,6 +2,8 @@
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
 import '../styles/global.css';
+import SpeedInsights  from "@vercel/speed-insights/astro";
+
 
 interface Props {
 	title: string;
@@ -48,3 +50,5 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 
 <!-- Plausible -->
 <script defer data-domain="harrikilpio.com" src="https://plausible.io/js/script.js"></script>
+
+<SpeedInsights />
