--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,9 +13,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<body>
 		<Header title={SITE_TITLE} />
 		<main>
-			<h1>Moikka ja tervetuloa!</h1>
+			<h1>Tervetuloa Harri Kilpiön sivustolle!</h1>
 			<p>
-				Voit tutustua uusimpiin <a href="/blog">blogkirjoituksiini</a>. Pääosin sivuan näissä erilaisia kokeilujani <a href="https://astro.build">Astron</a> parissa ja muiden teknlogiakokeilujen parissa.
+				Voit tutustua uusimpiin <a href="/blog">blogkirjoituksiini</a>. Pääosin sivuan näissä erilaisia kokeilujani <a href="https://astro.build">Astron</a> parissa ja muiden teknlogiakokeilujen(CSS) parissa.
 			</p>
 		</main>
 		<Footer />
