--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -3,7 +3,7 @@
 // all pages through the use of the <BaseHead /> component.
 import '../styles/global.css';
 import SpeedInsights  from "@vercel/speed-insights/astro";
-
+import { ViewTransitions } from 'astro:transitions';
 
 interface Props {
 	title: string;
@@ -52,3 +52,4 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <script defer data-domain="harrikilpio.com" src="https://plausible.io/js/script.js"></script>
 
 <SpeedInsights />
+<ViewTransitions />
