--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,8 @@
   License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
  */
 
+
+ 
 :root {
 	--accent: #2337ff;
 	--accent-dark: #000d8a;
@@ -14,6 +16,7 @@
 	--gray-gradient: rgba(var(--gray-light), 50%), #fff;
 	--box-shadow: 0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
 		0 16px 32px rgba(var(--gray), 33%);
+	--fluid-16-48: clamp(1rem, 0.3043rem + 3.4783vw, 3rem);
 }
 @font-face {
 	font-family: 'Atkinson';
@@ -56,23 +59,24 @@ h5,
 h6 {
 	margin: 0 0 0.5rem 0;
 	color: rgb(var(--black));
+	font-size:var(--fluid-16-48);
 	line-height: 1.2;
 }
-h1 {
-	font-size: 3.052em;
+/*h1 {
+	font-size: 3.052rem;
 }
 h2 {
-	font-size: 2.441em;
+	font-size: 2.441rem;
 }
 h3 {
-	font-size: 1.953em;
+	font-size: 1.953rem;
 }
 h4 {
-	font-size: 1.563em;
+	font-size: 1.563rem;
 }
 h5 {
-	font-size: 1.25em;
-}
+	font-size: 1.25rem;
+}*/
 strong,
 b {
 	font-weight: 700;
@@ -84,17 +88,17 @@ a:hover {
 	color: var(--accent);
 }
 p {
-	margin-bottom: 1em;
+	margin-bottom: 1rem;
 }
 .prose p {
-	margin-bottom: 2em;
+	margin-bottom: 2rem;
 }
 textarea {
 	width: 100%;
-	font-size: 16px;
+	font-size: 1rem;
 }
 input {
-	font-size: 16px;
+	font-size: 1rem;
 }
 table {
 	width: 100%;
