fluid typography fixes

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -32,11 +32,11 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 				width: 720px;
 				max-width: calc(100% - 2em);
 				margin: auto;
-				padding: 1em;
+				padding: 1rem;
 				color: rgb(var(--gray-dark));
 			}
 			.title {
-				margin-bottom: 1em;
+				margin-bottom: 1rem;
 				padding: 1em 0;
 				text-align: center;
 				line-height: 1;
