--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,7 @@
   License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
  */
 
+/* @link https://utopia.fyi/clamp/calculator?a=320,1240,16—48|16—24|13—18 */
 
  
 :root {
@@ -16,7 +17,9 @@
 	--gray-gradient: rgba(var(--gray-light), 50%), #fff;
 	--box-shadow: 0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
 		0 16px 32px rgba(var(--gray), 33%);
+	--fluid-13-18: clamp(0.8125rem, 0.7038rem + 0.5435vw, 1.125rem);
 	--fluid-16-48: clamp(1rem, 0.3043rem + 3.4783vw, 3rem);
+	--fluid-16-24: clamp(1rem, 0.8261rem + 0.8696vw, 1.5rem);
 }
 @font-face {
 	font-family: 'Atkinson';
@@ -47,9 +50,9 @@ body {
 }
 main {
 	width: 720px;
-	max-width: calc(100% - 2em);
+	max-width: calc(100% - 2rem);
 	margin: auto;
-	padding: 3em 1em;
+	padding: 3rem 1rem;
 }
 h1,
 h2,
@@ -62,21 +65,7 @@ h6 {
 	font-size:var(--fluid-16-48);
 	line-height: 1.2;
 }
-/*h1 {
-	font-size: 3.052rem;
-}
-h2 {
-	font-size: 2.441rem;
-}
-h3 {
-	font-size: 1.953rem;
-}
-h4 {
-	font-size: 1.563rem;
-}
-h5 {
-	font-size: 1.25rem;
-}*/
+
 strong,
 b {
 	font-weight: 700;
@@ -88,6 +77,7 @@ a:hover {
 	color: var(--accent);
 }
 p {
+	font-size:var(--fluid-16-24);
 	margin-bottom: 1rem;
 }
 .prose p {
@@ -113,8 +103,11 @@ code {
 	background-color: rgb(var(--gray-light));
 	border-radius: 2px;
 }
+ul {
+	font-size: var(--fluid-16-24);
+}
 pre {
-	padding: 1.5em;
+	padding: 1.5rem;
 	border-radius: 8px;
 }
 pre > code {
@@ -123,8 +116,8 @@ pre > code {
 blockquote {
 	border-left: 4px solid var(--accent);
 	padding: 0 0 0 20px;
-	margin: 0px;
-	font-size: 1.333em;
+	margin: 0;
+	font-size: var(--fluid-13-18);
 }
 hr {
 	border: none;
@@ -135,7 +128,7 @@ hr {
 		font-size: 18px;
 	}
 	main {
-		padding: 1em;
+		padding: 1rem;
 	}
 }
 
