--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -10,7 +10,7 @@ const { date } = Astro.props;
 	{
 		date.toLocaleDateString('fi-fi', {
 			year: 'numeric',
-			month: 'short',
+			month: 'long',
 			day: 'numeric',
 		})
 	}
