--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@ import { SITE_TITLE } from '../consts';
 		<div class="internal-links">
 			<HeaderLink href="/">Etusivu</HeaderLink>
 			<HeaderLink href="/blog">Blogi</HeaderLink>
-			<HeaderLink href="/about">Minusta</HeaderLink>
+			<HeaderLink href="/minusta">Minusta</HeaderLink>
 		</div>
 		
 	</nav>
