--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<main>
 			<h1>Tervetuloa Harri Kilpiön hiekkalaatikolle!</h1>
 			<p>
-				Voit tutustua uusimpiin <a href="/blog">blogkirjoituksiini</a>. Pääosin sivuan näissä erilaisia kokeilujani <a href="https://astro.build">Astron</a>  ja muiden <a href="/about/">kiinnostuksen kohteiden</a> parissa. 
+				Voit tutustua uusimpiin <a href="/blog">blogkirjoituksiini</a>. Pääosin sivuan näissä erilaisia kokeilujani <a href="https://astro.build">Astron</a>  ja muiden <a href="/minusta/">kiinnostuksen kohteiden</a> parissa. 
 			</p>
 		</main>
 		<Footer />
