--- a/src/pages/minusta.astro
+++ b/src/pages/minusta.astro
@@ -8,7 +8,7 @@ import Layout from '../layouts/BlogPost.astro';
 	pubDate={new Date('January 08 2024')}
 >
 	<p>
-		Moikka, olen kahden lapsen isä ja suunnittelija / kehittäjä Uudeltamaalta. 
+		Moikka, olen kahden lapsen isä ja suunnittelija / kehittäjä Järvenpäästä, Uudeltamaalta. 
 	</p>
 	<p>Asioita joista olen kiinnostunut</p>
 	<ul>
