first version of dark more styles

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -26,4 +26,11 @@ const today = new Date();
 	.social-links a:hover {
 		color: rgb(var(--gray-dark));
 	}
+	@media (prefers-color-scheme: dark) {
+		footer {
+			background: #1b1b1b;
+			color: #fff;
+			border-top:1px solid var(--fbc-white) ;
+		}
+	}
 </style>
