--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -15,7 +15,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 		<BaseHead title={title} description={description} />
 		<style>
 			main {
-				width: calc(100% - 2em);
+				width: calc(100% - 2rem);
 				max-width: 100%;
 				margin: 0;
 			}
@@ -30,7 +30,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 			}
 			.prose {
 				width: 720px;
-				max-width: calc(100% - 2em);
+				max-width: calc(100% - 2rem);
 				margin: auto;
 				padding: 1rem;
 				color: rgb(var(--gray-dark));
@@ -50,6 +50,14 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 			}
 			.last-updated-on {
 				font-style: italic;
+			}
+			
+			@media (prefers-color-scheme: dark) { 
+				.date {
+					color:#fff;
+				}
+
+					
 			}
 		</style>
 	</head>
