--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -149,3 +149,34 @@ hr {
 	/* added line to stop words getting smushed together (as they go onto seperate lines and some screen readers do not understand line feeds as a space */
 	white-space: nowrap;
 }
+
+@media (prefers-color-scheme: dark) {
+	body {
+		background: #1b1b1b;
+	}
+	main {
+		border-top: 1px solid rgba(255,255,255,0.6);
+	}
+	main p,
+	main h1,
+	article p,
+	article h1,
+	article h2,
+	article h3,
+	article h4,
+	article h5,
+	article h6,
+	article ul {
+		color: #fff;
+	}
+
+	main a {
+		color:#fff;
+	}
+
+	main a:hover {
+		background-color: #777;
+		color:inherit;
+	}
+	
+}
