--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -58,6 +58,7 @@ import { SITE_TITLE } from '../consts';
 	@media (prefers-color-scheme: dark) {
 		header {
 			background:#1b1b1b;
+			border-bottom: 1px solid rgba(255,255,255,0.6);
 		}
 
 		header a {
