--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,9 +21,14 @@ import { SITE_TITLE } from '../consts';
 		background: white;
 		box-shadow: 0 2px 8px rgba(var(--black), 5%);
 	}
+	
 	h2 {
 		margin: 0;
-		font-size: 1em;
+		font-size: 1rem;
+	}
+
+	h2 {
+		font-size:var(--fluid-13-18);	
 	}
 
 	h2 a,
@@ -40,6 +45,10 @@ import { SITE_TITLE } from '../consts';
 		color: var(--black);
 		border-bottom: 4px solid transparent;
 		text-decoration: none;
+	}
+
+	nav a { 
+		font-size:var(--fluid-13-18);	
 	}
 	nav a.active {
 		text-decoration: none;
