reduced motion support

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -149,7 +149,11 @@ hr {
 	/* added line to stop words getting smushed together (as they go onto seperate lines and some screen readers do not understand line feeds as a space */
 	white-space: nowrap;
 }
-
+@media (prefers-reduced-motion: reduce) {
+	* {
+		animation: none !important;
+	}
+}
 @media (prefers-color-scheme: dark) {
 	body {
 		background: #1b1b1b;
