fontsize fixes to blog

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -26,6 +26,12 @@ const posts = (await getCollection('blog')).sort(
 				list-style-type: none;
 				margin: 0;
 				padding: 0;
+				font-size: var(--fluid-16-24);
+			
+			}
+
+			ul h4 {
+				font-size:inherit;
 			}
 			ul li {
 				width: calc(50% - 1rem);
