--- a/src/pages/minusta.astro
+++ b/src/pages/minusta.astro
@@ -10,7 +10,7 @@ import Layout from '../layouts/BlogPost.astro';
 	<p>
 		Moikka, olen kahden lapsen isä ja suunnittelija / kehittäjä Järvenpäästä, Uudeltamaalta. 
 	</p>
-	<p>Asioita joista olen kiinnostunut</p>
+	<p>Asioita joista olen mm. kiinnostunut:</p>
 	<ul>
 		<li>CSS ja sen mahdollistamat asiat esim. CSS Grid</li>
 		<li>hyvin suunnitellut gridit</li>
