--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -80,9 +80,16 @@ p {
 	font-size:var(--fluid-16-24);
 	margin-bottom: 1rem;
 }
+
 .prose p {
-	margin-bottom: 2rem;
+	font-size:var(--fluid-16-24);
+	margin-bottom:2rem;
 }
+
+.prose ul {
+	font-size:var(--fluid-16-24);
+}
+
 textarea {
 	width: 100%;
 	font-size: 1rem;
@@ -122,9 +129,7 @@ hr {
 	border-top: 1px solid rgb(var(--gray-light));
 }
 @media (max-width: 720px) {
-	body {
-		font-size: 18px;
-	}
+	
 	main {
 		padding: 1rem;
 	}
