--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -77,6 +77,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 			}
 			.last-updated-on {
 				font-style: italic;
+				padding-top:.5rem
 			}
 			
 			@media (prefers-color-scheme: dark) { 
