--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,7 @@ import { SITE_TITLE } from '../consts';
 <style>
 	header {
 		margin: 0;
-		padding: 0 1em;
+		padding: 0 .5em;
 		background: white;
 		box-shadow: 0 2px 8px rgba(var(--black), 5%);
 	}
@@ -25,10 +25,11 @@ import { SITE_TITLE } from '../consts';
 	h2 {
 		margin: 0;
 		font-size: 1rem;
+		line-height: 1.2;
 	}
 
 	h2 {
-		font-size:var(--fluid-13-18);	
+		font-size:var(--fluid-13-18);
 	}
 
 	h2 a,
