dark mode fixes

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -78,6 +78,8 @@ import { SITE_TITLE } from '../consts';
 
 		header a:hover {
 			background-color: #777;
+			color:#fff;
+			text-decoration: underline;
 		}
 
 		nav a.active {
