--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,7 @@ import { SITE_TITLE } from '../consts';
 <style>
 	header {
 		margin: 0;
-		padding: 0 .5em;
+		padding: 0 .5rem;
 		background: white;
 		box-shadow: 0 2px 8px rgba(var(--black), 5%);
 	}
@@ -32,21 +32,27 @@ import { SITE_TITLE } from '../consts';
 	h2 a.active {
 		text-decoration: none;
 	}
+	
+	
 	nav {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
 	}
+
 	nav a {
-		padding: 1em 0.5em;
+		padding: 1.25rem .5rem;
 		color: var(--black);
 		border-bottom: 4px solid transparent;
 		text-decoration: none;
-	}
-
-	nav a { 
 		font-size:var(--fluid-13-18);	
 	}
+
+	nav h2 a {
+		padding: 0 .5rem;
+		display: inline-block;
+	}
+
 	nav a.active {
 		text-decoration: none;
 		border-bottom-color: var(--accent);
