about page finetunings

--- a/src/pages/minusta.astro
+++ b/src/pages/minusta.astro
@@ -13,14 +13,14 @@ import Layout from '../layouts/BlogPost.astro';
 	
 	<p>Asioita joista olen mm. kiinnostunut:</p>
 	
-	<ul>
+	<ul class="interest-topics">
 		<li>CSS ja sen mahdollistamat asiat esim. CSS Grid</li>
-		<li>hyvin suunnitellut gridit</li>
-		<li>hyvin muotoillut ulkoasut</li>
-		<li>hienosti suunnittelut muotoilukirjastot (Design Systems)</li>
-		<li>typografia</li>
-		<li>saavutettavuus</li>
-		<li>yhteissuunnittelu</li>
-		<li>sankarisuunnittelija myyttien purkaminen</li>
+		<li>Hyvin suunnitellut gridit</li>
+		<li>Hyvin muotoillut ulkoasut</li>
+		<li>Hienosti suunnittelut muotoilukirjastot (Design Systems)</li>
+		<li>Typografia</li>
+		<li>Saavutettavuus</li>
+		<li>Yhteissuunnittelu</li>
+		<li>Sankarisuunnittelija myyttien purkaminen</li>
 	</ul>
 </Layout>
