--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,6 +23,7 @@ import { SITE_TITLE } from '../consts';
 	
 	h2 {
 		margin: 0;
+		
 		font-size:var(--fluid-16-24);
 		line-height: 1.2;
 	}
@@ -40,7 +41,7 @@ import { SITE_TITLE } from '../consts';
 	}
 
 	nav a {
-		padding: 1.25rem .35rem;
+		padding: 1.5rem .35rem 1.25rem .35rem;
 		color: var(--black);
 		border-bottom: 4px solid transparent;
 		text-decoration: none;
