--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,6 +17,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 			<p>
 				Voit tutustua uusimpiin <a href="/blog">blogikirjoituksiini</a>. Pääosin sivuan näissä erilaisia kokeilujani <a href="https://astro.build">Astron</a>  ja muiden <a href="/minusta/">kiinnostuksen kohteiden</a> parissa. 
 			</p>
+
+			<p>Olen alkanut kokoamaan <a href="/portfolio">portfoliota</a> valikoiduista töistä.</p>
 		</main>
 		<Footer />
 	</body>
