--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -64,6 +64,7 @@ h6 {
 	margin: 0 0 0.5rem 0;
 	color: rgb(var(--black));
 	font-size: var(--fluid-16-48);
+	font-weight: 700;
 	line-height: 1.2;
 	text-wrap: balance;
 }
