--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,6 +17,9 @@
 	--gray-gradient: rgba(var(--gray-light), 50%), #fff;
 	--box-shadow: 0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
 		0 16px 32px rgba(var(--gray), 33%);
+	--sl-color-gray-2: hsl(224, 10%, 23%);
+	--sl-color-gray-5: hsl(224, 6%, 77%);
+	--sl-shadow-md: 0px 8px 4px hsla(0, 0%, 0%, .03), 0px 5px 2px hsla(0, 0%, 0%, .03), 0px 3px 2px hsla(0, 0%, 0%, .06), 0px 1px 1px hsla(0, 0%, 0%, .06);
 	--fluid-13-18: clamp(0.8125rem, 0.7038rem + 0.5435vw, 1.125rem);
 	--fluid-16-48: clamp(1rem, 0.3043rem + 3.4783vw, 3rem);
 	--fluid-16-24: clamp(1rem, 0.8261rem + 0.8696vw, 1.5rem);
