--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -113,8 +113,15 @@ const { title, description, pubDate, updatedDate, heroImage, prevBlogSlug, nextB
 		
 		.nav-title {
 	    	font-size: 1.2rem;
-			
 			display: block;
+		}
+
+		.nav-prev .nav-title {
+			text-align: start;
+		}
+
+		.nav-next .nav-title {
+			text-align: end;
 		}
 
 	@media (prefers-color-scheme: dark) { 
